# rice-box-hub

./: .gitignore  README.md  docker-compose.yml
app/: README.md
app/ARKitImageDetection/: ViewController.swift  antenna.scn  ris.scn  ris.usdz  risbox.scn  test.scn
app/ARKitImageDetection.xcodeproj/: project.pbxproj
app/RICE/: ARViewContainer.swift  AppDelegate.swift  ContentView.swift  geoMod.metal
app/RICE.xcodeproj/: project.pbxproj
arduino/: LinActStepper.cpp  LinearActuator.cpp  README.md  arduino copy.ino  arduino.ino  displacement.ino  main.ino
hub/: README.md  index.jsx  index.mjs  package-lock.json  package.json  server.Dockerfile  server.mjs  web.Dockerfile
hub/cereal/: Cargo.toml  Dockerfile  README.md
hub/cereal/src/: choose_usb_port.rs  main.rs  main_mock.rs
hub/pages/: RIS.jsx  Tests.jsx  _app.tsx  index.jsx
hub/server/: appendingQueueController.ts  appendingQueueController_test.ts  index.ts  mock_julia.ts  server.ts  socket.ts  socket_test.ts  tsconfig.json  types.ts
hub/web/: constants.ts  next.config.js  package-lock.json  package.json  tsconfig.json
hub/web/components/: Bars.tsx  (+6 more)
measurement-data/: -1  -10  -11  -12  -13  -14  -15  -16  -17  -18  -19  -2  -20  -21  -22  -23  -24  -25  -26  -27  -28  -29  -3  -30  -31  -32  -33  -34  -35  -36  -37  -38  -39  -4  -40  -5  -6  -7  -8  -9  (+46 more)
positioning/: .dockerignore  Dockerfile  ElementDisplacing.jl  README.md  Surface.jl  Vec2.jl  mock_hub.jl  positioning.jl  positioning_functions.jl  types.jl
radio/: main.py  requirements.txt  util.py
schematics/: README.txt  RIS-fusion360.f3d
(+48 files in other folders)
