[package]
name = "cereal"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "cereal"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
rand = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.redis]
version = "*"